tests/specs/npm/check_prefers_non_types_node_pkg/expected.out
TS2345 [ERROR]: Argument of type 'number' is not assignable to parameter of type 'string'.
console.log(compressToEncodedURIComponent(123));
                                          ~~~
    at file:///[WILDLINE]

error: Type checking failed.
